Update upstream URL (FS#72983)
git-svn-id: file:///srv/repos/svn-packages/svn@431910 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -7,7 +7,7 @@ _pkgver=5.212.0-alpha4
 pkgver=${_pkgver/-/}
 pkgrel=11
 arch=(x86_64)
-url='https://www.qt.io'
+url='https://github.com/qtwebkit/qtwebkit'
 license=(GPL3 LGPL3 FDL custom)
 pkgdesc='Classes for a WebKit2 based implementation and a new QML API'
 source=("https://github.com/qtwebkit/qtwebkit/releases/download/qtwebkit-$_pkgver/qtwebkit-$_pkgver.tar.xz"
