--- a/repos/extra-x86_64/PKGBUILD
+++ b/repos/extra-x86_64/PKGBUILD
@@ -6,15 +6,23 @@ pkgname=(shiboken2 python-shiboken2)
 _qtver=5.15.2
 _clangver=13.0.0
 pkgver=${_qtver/-/}
-pkgrel=10
+pkgrel=13
 arch=(x86_64)
 url='https://www.qt.io'
 license=(GPL2 LGPL)
 pkgdesc='Generates bindings for C++ libraries using CPython source code'
-makedepends=(clang llvm cmake libxslt qt5-xmlpatterns python-sphinx)
+makedepends=(clang llvm cmake libxslt qt5-xmlpatterns python-sphinx
+             python-wheel)
 _pkgfqn=pyside-setup-opensource-src-$_qtver
-source=("https://download.qt.io/official_releases/QtForPython/pyside2/PySide2-$pkgver-src/${_pkgfqn}.tar.xz")
-sha256sums=('b306504b0b8037079a8eab772ee774b9e877a2d84bab2dbefbe4fa6f83941418')
+source=("https://download.qt.io/official_releases/QtForPython/pyside2/PySide2-$pkgver-src/${_pkgfqn}.tar.xz"
+        python310.patch)
+sha256sums=('b306504b0b8037079a8eab772ee774b9e877a2d84bab2dbefbe4fa6f83941418'
+            '04d4a4205e9a03d31032bf9979855d7644402466b83dccd53d4239d745c42f54')
+
+prepare() {
+  cd ${_pkgfqn}
+  patch -Np1 -i ../python310.patch
+}
 
 build() {
   cmake -B build -S ${_pkgfqn}/sources/shiboken2 \
