Build with -ffat-lto-objects
git-svn-id: file:///srv/repos/svn-packages/svn@433045 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -57,6 +57,9 @@ prepare() {
 build() {
   cd "$srcdir/llvm-$pkgver.src/build"
 
+  CFLAGS+=' -ffat-lto-objects'
+  CXXFLAGS+=' -ffat-lto-objects'
+
   local cmake_args=(
     -G Ninja
     -DCMAKE_BUILD_TYPE=Release
