--- a/repos/extra-x86_64/PKGBUILD
+++ b/repos/extra-x86_64/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=pam_ldap
 pkgver=186
-pkgrel=8
+pkgrel=9
 pkgdesc="LDAP authentication module for the PAM framework"
 arch=('x86_64')
 url="http://www.padl.com/OSS/pam_ldap.html"
@@ -12,8 +12,14 @@ depends=('libldap' 'pam')
 backup=('etc/pam_ldap.conf')
 options=('!makeflags')
 #source=("https://www.padl.com/download/${pkgname}-${pkgver}.tar.gz")
-source=("https://sources.archlinux.org/other/packages/pam_ldap/$pkgname-$pkgver.tar.gz")
-md5sums=('58c8689921c5c4578363438acd8503c2')
+source=("https://sources.archlinux.org/other/packages/pam_ldap/$pkgname-$pkgver.tar.gz" "pam_ldap-reproducible.patch")
+md5sums=('58c8689921c5c4578363438acd8503c2'
+         'a79a0629fe04eaa350e0a94f00dde7c8')
+
+prepare() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  patch -Np1 -i ${srcdir}/pam_ldap-reproducible.patch
+}
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
