Completely remove useless and annoying C++ ABI warning
git-svn-id: file:///srv/repos/svn-packages/svn@433434 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,27 +1,24 @@
-# Maintainer: Eric Bélanger <eric@archlinux.org>
+# Maintainer: Antonio Rojas <arojas@archlinux.org>
+# Contributor: Eric Bélanger <eric@archlinux.org>
 
 pkgbase=wxgtk
 pkgname=(wxgtk2 wxgtk3 wxgtk-common)
 pkgver=3.0.5.1
-pkgrel=2
-arch=('x86_64')
-url="https://wxwidgets.org"
-license=('custom:wxWindows')
+pkgrel=3
+arch=(x86_64)
+url='https://wxwidgets.org'
+license=(custom:wxWindows)
 makedepends=(gst-plugins-base glu webkit2gtk libnotify gtk2)
-options=('!emptydirs')
+options=(!emptydirs)
 source=(https://github.com/wxWidgets/wxWidgets/releases/download/v$pkgver/wxWidgets-$pkgver.tar.bz2
-        make-abicheck-non-fatal.patch)
+        wxgtk-abicheck.patch)
 sha256sums=('440f6e73cf5afb2cbf9af10cec8da6cdd3d3998d527598a53db87099524ac807'
-            '46a1bb97d69163547da13d5e23a4c73e68de27ee601da5d2fb5bc5c417931453')
+            '53501db871290b71967af08b60aedb738c920a307ef9bd32dd19c30498732cf8')
 
 prepare() {
-  cd wxWidgets-$pkgver
+  # C++ ABI check is too strict
+  patch -d wxWidgets-$pkgver -p1 -i ../wxgtk-abicheck.patch
 
-  # C++ ABI check is too strict and breaks with GCC 5.1
-  # https://bugzilla.redhat.com/show_bug.cgi?id=1200611
-  patch -Np1 -i ../make-abicheck-non-fatal.patch
-
-  cd ..
   cp -r wxWidgets-$pkgver wxWidgets-$pkgver-gtk3
 }
 
