--- a/repos/extra-any/PKGBUILD
+++ b/repos/extra-any/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=archboot
 pkgver=2022.01
-pkgrel=2
+pkgrel=3
 pkgdesc="Advanced, modular arch boot/install image creation utility"
 arch=(any)
 license=('GPL')
@@ -28,16 +28,19 @@ depends=('mkinitcpio' 'wget' 'bash' 'coreutils' 'cryptsetup' 'dialog' 'e2fsprogs
 makedepends=('git')
 optdepends=('archboot-linux-firmware: for stripped down firmware inclusion on image file'
             'linux-firmware: for firmware inclusion on image file')
-source=("git+https://gitlab.archlinux.org/tpowa/archboot.git#tag=${pkgver}-${pkgrel}?signed")
+source=("git+https://gitlab.archlinux.org/tpowa/archboot.git#tag=${pkgver}-${pkgrel}?signed"
+        "https://github.com/multiarch/qemu-user-static/releases/download/v6.1.0-8/qemu-aarch64-static")
 backup=('etc/archboot/x86_64.conf'
         'etc/archboot/presets/x86_64'
 )
 install=archboot.install
-sha256sums=('SKIP')
+sha256sums=('SKIP'
+            'ad99eac2a78524b99b2af164055fde54675dafe6fbe303aa35d8e1718508b41c')
 validgpgkeys=('5B7E3FB71B7F10329A1C03AB771DF6627EDF681F' # Tobias Powalowski <tpowa@archlinux.org>
              )
 package()
 {
   cd "$srcdir/archboot"
   mv etc/ usr/ "$pkgdir/"
+  mv $srcdir/qemu-aarch64-static $pkgdir/usr/bin/archboot-qemu-aarch64-static
 }
