--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -42,5 +42,5 @@ package()
 {
   cd "$srcdir/archboot"
   mv etc/ usr/ "$pkgdir/"
-  mv $srcdir/qemu-aarch64-static $pkgdir/usr/bin/archboot-qemu-aarch64-static
+  cp $srcdir/qemu-aarch64-static $pkgdir/usr/bin/archboot-qemu-aarch64-static
 }
