upgpkg: archboot 2022.01-3: bump to latest version
git-svn-id: file:///srv/repos/svn-packages/svn@433759 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -42,5 +42,5 @@ package()
 {
   cd "$srcdir/archboot"
   mv etc/ usr/ "$pkgdir/"
-  cp $srcdir/qemu-aarch64-static $pkgdir/usr/bin/archboot-qemu-aarch64-static
+  install -m 755 $srcdir/qemu-aarch64-static $pkgdir/usr/bin/archboot-qemu-aarch64-static
 }
