--- a/repos/extra-any/PKGBUILD
+++ b/repos/extra-any/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=archboot-arm
 pkgver=2022.01
-pkgrel=4
+pkgrel=5
 pkgdesc="Advanced, modular arch boot/install image creation utility with aarch64 depends"
 arch=(any)
 license=('GPL')
@@ -20,7 +20,7 @@ depends=('mkinitcpio' 'wget' 'bash' 'coreutils' 'cryptsetup' 'dialog' 'e2fsprogs
 	 'iana-etc' 'libusb-compat' 'keyutils' 'libisoburn' 'file' 'curl'  'smartmontools' 'dnsmasq' 'lftp'
 	 'openconnect' 'libxml2' 'libproxy' 'tcpdump' 'nmap' 'lua' 'gnutls' 'nettle' 'libtasn1' 'expat' 'progsreiserfs'
 	 'glib2' 'freetype2' 'libssh2' 'libedit' 'talloc' 'libjpeg-turbo' 'dmidecode' 'pth' 'gnupg' 'libksba' 'libassuan' 'pinentry'
-	 'gpgme' 'ldns' 'dnssec-anchors' 'hwids' 'systemd' 'archlinux-keyring' 'haveged' 'pambase' 'traceroute' 'grub' 
+	 'gpgme' 'ldns' 'dnssec-anchors' 'hwids' 'systemd' 'haveged' 'pambase' 'traceroute' 'grub' 
 	 'systemd-sysvcompat' 'arch-install-scripts' 'zsh' 'gdbm' 'grml-zsh-config' 'cpupower' 'wvdial' 'xl2tpd' 
 	 'usb_modeswitch' 'efibootmgr' 'f2fs-tools' 'efitools' 'efivar' 'ethtool' 'exfatprogs' 
 	 'fuse3' 'flex' 'expac' 'amd-ucode' 'cdrtools' 'mktorrent' 'nvme-cli' 'fatresize' 'iwd' 'elinks' 'lshw' 
