--- a/repos/extra-any/PKGBUILD
+++ b/repos/extra-any/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=archboot-arm
 pkgver=2022.01
-pkgrel=9
+pkgrel=10
 pkgdesc="Advanced, modular arch boot/install image creation utility with aarch64 depends"
 arch=(any)
 license=('GPL')
@@ -30,10 +30,13 @@ optdepends=('archboot-linux-firmware: for stripped down firmware inclusion on im
             'linux-firmware: for firmware inclusion on image file')
 source=("git+https://gitlab.archlinux.org/tpowa/archboot.git#tag=${pkgver}-${pkgrel}?signed")
 backup=('etc/archboot/x86_64.conf'
+        'etc/archboot/aarch64.conf'
+        'etc/archboot/x86_64-latest.conf'
+        'etc/archboot/aarch64-latest.conf'
         'etc/archboot/presets/x86_64'
-	'etc/archboot/presets/aarch64'
-	'etc/archboot/aarch64.conf'
-)
+        'etc/archboot/presets/aarch64'
+        'etc/archboot/presets/x86_64-latest'
+        'etc/archboot/presets/aarch64-latest')
 install=archboot.install
 sha256sums=('SKIP')
 validgpgkeys=('5B7E3FB71B7F10329A1C03AB771DF6627EDF681F' # Tobias Powalowski <tpowa@archlinux.org>
