--- a/repos/extra-any/PKGBUILD
+++ b/repos/extra-any/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=archboot
 pkgver=2022.01
-pkgrel=9
+pkgrel=10
 pkgdesc="Advanced, modular arch boot/install image creation utility"
 arch=(any)
 license=('GPL')
@@ -31,8 +31,13 @@ optdepends=('archboot-linux-firmware: for stripped down firmware inclusion on im
 source=("git+https://gitlab.archlinux.org/tpowa/archboot.git#tag=${pkgver}-${pkgrel}?signed"
         "https://github.com/multiarch/qemu-user-static/releases/download/v6.1.0-8/qemu-aarch64-static")
 backup=('etc/archboot/x86_64.conf'
+        'etc/archboot/aarch64.conf'
+        'etc/archboot/x86_64-latest.conf'
+        'etc/archboot/aarch64-latest.conf'
         'etc/archboot/presets/x86_64'
-)
+        'etc/archboot/presets/aarch64'
+        'etc/archboot/presets/x86_64-latest'
+        'etc/archboot/presets/aarch64-latest')
 install=archboot.install
 sha256sums=('SKIP'
             'ad99eac2a78524b99b2af164055fde54675dafe6fbe303aa35d8e1718508b41c')
